go infinity tst

--- a/App.config
+++ b/App.config
@@ -2,8 +2,8 @@
 <configuration>
 	<appSettings>
 		<add key="StockFishPath" value="D:\Users\Murad\StockFish\stockfish-windows-x86-64-avx2.exe" />
-		<add key="Elo" value="1450"/>
-		<add key="Timeout" value="5000"/>
-		<add key="Threads" value="8"/>
+		<add key="Elo" value="2500"/>
+		<add key="Depth" value="10"/>
+		<add key="Threads" value="16"/>
 	</appSettings>
 </configuration>
