--- a/App.config
+++ b/App.config
@@ -15,6 +15,9 @@
    <setting name="RequiredScoreValue" serializeAs="String">
     <value>10000</value>
    </setting>
+   <setting name="RequiredTimeMs" serializeAs="String">
+    <value>1000</value>
+   </setting>
   </Chezzz.Properties.Settings>
  </userSettings>
 </configuration>
