--- a/App.config
+++ b/App.config
@@ -13,10 +13,10 @@
  <userSettings>
   <Chezzz.Properties.Settings>
    <setting name="RequiredTime" serializeAs="String">
-    <value>1000</value>
+    <value>1500</value>
    </setting>
-   <setting name="RequiredScore" serializeAs="String">
-    <value>150</value>
+   <setting name="RequiredLevel" serializeAs="String">
+    <value>1</value>
    </setting>
   </Chezzz.Properties.Settings>
  </userSettings>
