fixed bug with game history parsing on chess.com

--- a/Chezzz/App.config
+++ b/Chezzz/App.config
@@ -8,7 +8,7 @@
   </sectionGroup>
  </configSections>
  <appSettings>
-		<add key="StockFishPath" value="D:\Users\Murad\StockFish\stockfish-windows-x86-64-avx2.exe" />
+		<add key="StockFishPath" value="..\stockfish\stockfish-windows-x86-64-avx2.exe" />
 	</appSettings>
  <userSettings>
   <Chezzz.Properties.Settings>
