--- a/Chezzz/App.config
+++ b/Chezzz/App.config
@@ -15,6 +15,9 @@
    <setting name="RequiredTime" serializeAs="String">
     <value>1000</value>
    </setting>
+   <setting name="Strategy" serializeAs="String">
+    <value>w</value>
+   </setting>
   </Chezzz.Properties.Settings>
  </userSettings>
 </configuration>
