--- a/Chezzz/Properties/Settings.settings
+++ b/Chezzz/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="RequiredTime" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1000</Value>
     </Setting>
+    <Setting Name="Strategy" Type="System.String" Scope="User">
+      <Value Profile="(Default)">w</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
