--- a/Chezzz/App.config
+++ b/Chezzz/App.config
@@ -15,8 +15,8 @@
    <setting name="RequiredTime" serializeAs="String">
     <value>1000</value>
    </setting>
-   <setting name="Strategy" serializeAs="String">
-    <value>w</value>
+   <setting name="RequiredScore" serializeAs="String">
+    <value>50</value>
    </setting>
   </Chezzz.Properties.Settings>
  </userSettings>
